<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/body_bg" >
   <RelativeLayout android:id="@+id/header"
                  style="@style/NavHeader"
                  android:layout_height="@dimen/nav_height">
       <TextView
           style="@style/Title_TextView"
           android:text="@string/about_title"/>
   </RelativeLayout>
   <View style="@style/LineView"/>
    <ScrollView
	      android:id="@+id/scrollView"
	      android:layout_width="match_parent"
	      android:layout_height="0dp"
	      android:layout_weight="1"
	      android:fadingEdge="none">
   <LinearLayout  
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/body_bg">
	  <View
	        android:layout_width="fill_parent"
	        android:layout_height="12dp" />
	  <LinearLayout 
	      android:id="@+id/font_size_settings"
	      style="@style/SettingCell">
	      <TextView 
	                style="@style/SettingTextView"
	                android:text="@string/font_size_settings"/>
	      <TextView 
	               android:id="@+id/font_size_choosed"
	                style="@style/RightTextView"
	                android:text="@string/font_size_middle"/>
	      <net.java.efurture.icon.IconTextView
	         style="@style/AngleRightIcon"/>
	  </LinearLayout>
	  <View
	        android:layout_width="fill_parent"
	        android:layout_height="1px" />
	  <LinearLayout
	               style="@style/SettingCell"
	               android:id="@+id/share_with_friends">
	      <TextView 
	                style="@style/SettingTextView"
	                android:text="@string/share_with_friends"/>
	      <net.java.efurture.icon.IconTextView
	         style="@style/AngleRightIcon"/>
	  </LinearLayout>
	  <View
	        android:layout_width="fill_parent"
	        android:layout_height="1px" />
	  <LinearLayout  android:id="@+id/rate_app"
	               style="@style/SettingCell">
	     <TextView 
	                style="@style/SettingTextView"
	                android:text="@string/rate_app"/>
	      <net.java.efurture.icon.IconTextView
	         style="@style/AngleRightIcon"/>
	  </LinearLayout>
	  <View
	        android:layout_width="fill_parent"
	        android:layout_height="12dp" /> 
	  <LinearLayout android:id="@+id/share_my_blog"
	          style="@style/SettingCell">
	     <TextView 
	                style="@style/SettingTextView"
	                android:text="@string/share_my_blog"/>
	      <net.java.efurture.icon.IconTextView
	         style="@style/AngleRightIcon"/>
	  </LinearLayout>   
	  <View
	        android:layout_width="fill_parent"
	        android:layout_height="1px" /> 
	  <LinearLayout 
	      android:id="@+id/bug_report"
	      style="@style/SettingCell">
	     <TextView 
	                style="@style/SettingTextView"
	                android:text="@string/bug_report"/>
	      <net.java.efurture.icon.IconTextView
	         style="@style/AngleRightIcon"/>
	  </LinearLayout> 
	  <View
	        android:layout_width="fill_parent"
	        android:layout_height="1px" /> 
	  <LinearLayout 
	      android:id="@+id/contact_me"
	      style="@style/SettingCell">
	     <TextView 
	                style="@style/SettingTextView"
	                android:text="@string/contact_me"/>
	      <net.java.efurture.icon.IconTextView
	         style="@style/AngleRightIcon"/>
	  </LinearLayout>     
	  <View
	        android:layout_width="fill_parent"
	        android:layout_height="12dp" />
	    <LinearLayout 
	      android:id="@+id/check_update"
	      style="@style/SettingCell">
	      <TextView 
	                style="@style/SettingTextView"
	                android:text="@string/check_update"/>
	      <TextView 
	               android:id="@+id/current_version"
	                style="@style/RightTextView"
	                android:text="@string/current_version"/>
	      <net.java.efurture.icon.IconTextView
	         style="@style/AngleRightIcon"/>
	  </LinearLayout>
	  <View
	        android:layout_width="fill_parent"
	        android:layout_height="1px" /> 
	   <LinearLayout 
	      android:id="@+id/about_huidu"
	      style="@style/SettingCell">
	      <TextView 
	                style="@style/SettingTextView"
	                android:text="@string/about_huidu"/>
	      <net.java.efurture.icon.IconTextView
	         style="@style/AngleRightIcon"/>
	  </LinearLayout>
	
    </LinearLayout>
  </ScrollView>
   
  
</LinearLayout>
